# splunk-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/commands/: splunk.md
.githooks/: pre-push
scripts/: setup-hooks.sh
src/splunk_mcp/: __init__.py  client.py  config.py  prompts.py  server.py
src/splunk_mcp/tools/: __init__.py  alerts.py  apps.py  dashboards.py  indexes.py  kvstore.py  macros.py  permissions.py  roles.py  saved_searches.py  search.py  server_info.py  users.py
